--- a/mfd-tools-backend/src/main/resources/application-dev.properties
+++ b/mfd-tools-backend/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/mfdtools?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=sanat123
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # App Properties
 mfdtools.app.jwtSecret=siddhantSecretKey
